# pdf2audiobook-base

./: .dockerignore  .env.example  .gitignore  BACKEND_DEV_GUIDELINES.md  FINAL_FIX_STATUS.md  Fixing Startup and CORS.md  MANUAL_TESTING_GUIDE.md  README.md  WORKER_ENV_SETUP.md  WORKER_FIX_APPLIED.md  check_job_8.py  check_jobs.py  check_redis.py  check_schema.py  create_pdf.py  docker-compose.dev.yml  docker-compose.yml  enable_wal.py  pr_body.md  pr_details.json  pr_details_4.json  pyproject.toml  recreate_db.py  render-build.sh  render-start-with-worker.sh  render-start.sh  requirements.txt  start-local.sh  stop-local.sh  test_enum.py  test_journey.py  trigger_task.py
alembic/: env.py
alembic/versions/: 1e025f228445_update_models_to_match_current_schema.py  a17b877b1ff5_add_usage_tracking_and_webhook_events.py  a33adb61776b_add_estimated_cost_and_update_modes.py
apps/production-ui/: README.md  middleware.ts  package-lock.json  package.json
apps/reference-ui/: Dockerfile  README.md  package-lock.json  package.json  vercel.json
backend/: DEPLOYMENT.md  Dockerfile  main.py  openapi.json  postman_collection.json  recreate_db.py  reset_job.py  seed_db.py  sync_products.py  test_paddle.py
backend/scripts/: check_redis.py  e2e_test.py  enable_wal.py  generate_docs.py  migrate_db.py  recreate_db.py
docs/: API_DOCUMENTATION.md  BACKEND.md  CREDITS_AND_USAGE.md  ENVIRONMENT_CONFIG_GUIDE.md  ENVIRONMENT_VARIABLES.md  ENVIRONMENT_VARIABLES_REFERENCE.md  FRONTEND.md  FRONTEND_AI_GUIDE.md  ROADMAP.md  SYSTEM_WALKTHROUGH.md  environment_variables.md  headphone fix.md
frontend/: middleware.ts  next.config.js
worker/: celery_app.py  pdf_pipeline.py  tasks.py
(+78 files in other folders)
